--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,14 @@
     "theme_color": "#000000",
     "icons": [
       {
-        "src": "",
-        "sizes": "",
-        "type": ""
+        "src": "images/icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
       },
       {
-        "src": "",
-        "sizes": "",
-        "type": ""
+        "src": "images/icon-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
       }
     ]
   }
